# multiagent

./: .gitignore  CHAPTER_4_RESULTS_AND_FINDINGS.md  DATA_PERSISTENCE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MSC_APPLICATION_OVERVIEW.md  PROFESSIONAL_DATA_SYSTEM.md  README.md  RESEARCH_FRAMEWORK.md  Untitled-1.ipynb  colab_clone_guide.ipynb  demo_ml_algorithms.py  install_log.txt  patch_local_backend.py  patch_notebook_backend_startup.py  pyproject.toml  set-colab-url.ps1  startup_cell.patched.txt  startup_cell.txt  test_persistence.py  tmp_inspect_notebook.py  uniassist_classifier.pkl  verify_fix.py
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
data/vectorstore/: chroma.sqlite3
multiagent/: .env  .env.example  AdminDashboard.jsx  AdvisorDashboard.jsx  AuditLog.jsx  COMPONENTS_USAGE_GUIDE.md  DataTable.jsx  DataValidationBadge.jsx  SearchFilter.jsx  VersionComparison.jsx  apiClient.js  api_server.py  app.jsx  index.html  index_data.py  package-lock.json  package.json  requirement.txt  uniassist_classifier.pkl  vite.config.js
multiagent/core/: monitoring.py  rag_system.py
multiagent/core/agents/: __init__.py  chatbot_agent.py  document_processing_agent.py  eligibility_verification_agent.py  financial_feasibility_agent.py  recommendation_agent.py
multiagent/core/database/: _init_.py  manager.py  (+5 more)
reports/: accuracy_presentation.md  accuracy_summary.csv  accuracy_summary.md  feature_accuracy_percentages.csv  feature_accuracy_percentages.md  ml_benchmark_report.json  ml_benchmark_report.md  realtime_accuracy_20260628_174536.json  realtime_accuracy_20260628_174536.md  realtime_accuracy_20260628_174841.json  realtime_accuracy_20260628_174841.md
scripts/: dev_seed_users.py  export_accuracy_summary.py  export_accuracy_summary_report.py  export_feature_accuracy_percentages.py  ingest_policy_snapshots.py  metrics_dashboard.py  migrate_json_to_db.py  prepush_secret_check.ps1  run_ml_benchmarks.py  run_realtime_accuracy_check.py  validate_data.py
tests/: REALTIME_EXTERNAL_FACTOR_TEST_CASES.md  test_auth_security_controls.py  test_chatbot_factor_orchestration.py
(+15 files in other folders)
