[project]
name = "multiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions]>=1.24.1",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "google-generativeai>=0.3.0",
    "faiss-cpu>=1.7.0",
    "pypdf>=4.0.0",
    "unstructured>=0.10.0",
]
